--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -4,7 +4,6 @@
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
     min-height: 100vh;
     margin: 0;
 }
@@ -13,7 +12,7 @@ textarea {
     width: 100%;
     height: 6em;
     padding: 0.5rem;
-    font-size: 18px;
+    font-size: 16px;
     border-radius: 5px;
     border: none;
 }
@@ -24,12 +23,13 @@ textarea {
     font-weight: bold;
     margin-left: 2em;
     margin-right: 0.5em;
+    min-width: 4em;
 }
 
 button {
     display: inline-block;
     border-radius: 10px;
-    padding: 0.5em;
+    padding: 0.3em;
     font-weight: bold;
     font-size: 14px;
 }
@@ -41,11 +41,12 @@ h1 {
 
 #learner {
     width: 50%;
-    padding: 0.5rem;
-    border-radius: 5px;
     margin-left: 1rem;
+    padding: 0.3rem;
+    border-radius: 5px;
 }
 
-.nullClass{
-
+.roundEdge {
+    border-radius: 5px;
 }
+
